...
		} catch (error) {
			console.error(error);
		}
	};

    const options = [
        { label : "In progress" , value : 'progress'},
        { label : "Completed", value : 'complete'}
    ]

    const [profilePhotoURL, setProfilePhotoURL] = useState("")
    const [displayName, setDisplayName] = useState("")
    const [userName, setUserName] = useState("")

...
