...
import axios from 'axios';
import {BACKEND_URL} from '@env';
import ZeroItem from '../components/shared/ZeroItem';
import { useFocusEffect } from '@react-navigation/native';

const options = [
  { label : "All" , value : 'All Friends'},
  { label : "Blocked", value : 'Blocked Users'},
]

function LeaguesPage(props): JSX.Element {
  const [reRender, setRender] = useState(true)

  useEffect(() => {
...
